--- a/www/index.html
+++ b/www/index.html
@@ -43,17 +43,50 @@
         
         <!--<script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>-->
         <div id="fb-root"></div>
-        <!-- cordova -->
-		<script src="phonegap.js"></script>
-	    <!-- cordova facebook plugin -->
-		<script src="cdv-plugin-fb-connect.js"></script>
-	    <!-- facebook js sdk -->
-		<script src="facebook-js-sdk.js"></script>
-        
+        <script type="text/javascript">
+                        $(document).on("mobileinit", function () { //must load before jqm
+                            // Reference: http://jquerymobile.com/demos/1.1.0/docs/api/globalconfig.html
+                            $.extend($.mobile, {
+                                linkBindingEnabled: false,
+                                ajaxEnabled: false,
+                                hashListeningEnabled: false,
+                                pushStateEnabled: false
+                            });
+                        });
+        </script>
+        <script type="text/javascript">
+            //http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
+            (function ($) {
+                $.QueryString = (function (a) {
+                    if (a == "") return {};
+                    var b = {};
+                    for (var i = 0; i < a.length; ++i) {
+                        var p = a[i].split('=');
+                        if (p.length != 2) continue;
+                        b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
+                    }
+                    return b;
+                })(window.location.search.substr(1).split('&'))
+            })(jQuery);
+            if ($.QueryString["dev"] == "Y") {
+                //    console.log('user real services');
+
+                //window.onerror = function (message, url, lineNumber) {
+                //    console.log("Error: " + message + " in " + url + " at line " + lineNumber);
+                //}               
+            }
+            else {
+                // console.log('user mock services');
+                document.write('<script  src="phonegap.js"><\/script>');
+                document.write('<script  src="cdv-plugin-fb-connect.js"><\/script>');
+                document.write('<script  src="facebook-js-sdk.js"><\/script>');
+                if ((typeof cordova == 'undefined') && (typeof Cordova == 'undefined')) alert('Cordova variable does not exist. Check that you have included cordova.js correctly');
+                if (typeof CDV == 'undefined') alert('CDV variable does not exist. Check that you have included cdv-plugin-fb-connect.js correctly');
+            }
+        </script>                
 		<script>
              <!-- These are the notifications that are displayed to the user through pop-ups if the above JS files does not exist in the same directory-->
-    if ((typeof cordova == 'undefined') && (typeof Cordova == 'undefined')) alert('Cordova variable does not exist. Check that you have included cordova.js correctly');
-    if (typeof CDV == 'undefined') alert('CDV variable does not exist. Check that you have included cdv-plugin-fb-connect.js correctly');
+   
     if (typeof FB == 'undefined') alert('FB variable does not exist. Check that you have included the Facebook JS SDK file.');
 
     FB.Event.subscribe('auth.login', function (response) {
